<resources>
    <string name="app_name">20181006 Doo Sowon</string>
    <string name="add_account">Add account</string>
    <string name="end">End</string>
    <string name="site_name">Site Name</string>
    <string name="URL">URL</string>
    <string name="user_account">User Account</string>
    <string name="password">Password</string>
    <string name="password_2">Confirm Password</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="sub_app">Edit</string>

</resources>
