<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_sitename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp"
        android:text="@string/site_name"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_URL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_sitename"
        android:text="@string/URL" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/tv_sitename"
        android:layout_alignBottom="@id/tv_URL"
        android:layout_alignParentRight="true"
        android:gravity="center|right"
        android:text="@string/user_account" />



</RelativeLayout>